samples/_failures_safe/1761487649_fe9a2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61f51bd5.c: In function ‘main’:
./samples/SAFE/__tmp_61f51bd5.c:163:18: error: expected ‘;’ at end of input
  163 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_61f51bd5.c:163:13: error: expected declaration or statement at end of input
  163 |             break
      |             ^~~~~
./samples/SAFE/__tmp_61f51bd5.c:163:13: error: expected declaration or statement at end of input
